--- a/frontend/esqueci.html
+++ b/frontend/esqueci.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="shortcut icon" type="image/x-icon" href="./imagens/favicon.ico">
-<link rel="stylesheet" type="text/css" href="../css/estilo.css">
+<link rel="stylesheet" type="text/css" href="../css/estilo2.css">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -86,36 +86,36 @@ body {
 </style>
 </head>
 <body>
-<div class="content">
+
   <form class="form" method="post" action="#">
     <div class="loginbox">
       <img src="imagens/user.png" class="avatar" width="60px" height="60px">
       <h1 class="form-header">Solicitação cadastro de usuário:</h1>
       <div class="mb-3">
-        <input type="text" class="form-control custom-input" id="exampleFormControlInput1" placeholder="Digite seu nome">
+        <input type="text" class="form-control custom-input" id="inpt1" placeholder="Digite seu nome">
+      </div>
+
+      <div class="mb-3">
+        <input type="number" class="form-control custom-input" id="inpt2" placeholder="Digite o cpf...  00000000000">
+      </div>
+
+      <div class="mb-3">
+        <input type="email" class="form-control custom-input" id="inpt3" placeholder="name@example.com">
+      </div>
+
+      <div class="mb-3">
+        <input type="password" class="form-control custom-input" id="inpt3" placeholder="Digite sua senha">
       </div>
       <div class="mb-3">
-        <input type="number" class="form-control custom-input" id="exampleFormControlInput2" placeholder="Digite o cpf...  00000000000">
+        <input type="password" class="form-control custom-input" id="inpt3" placeholder="Repita sua senha">
       </div>
-      <div class="mb-3">
-        <input type="email" class="form-control custom-input" id="exampleFormControlInput3" placeholder="name@example.com">
-      </div>
-	  <div class="mb-3">
-        <input type="text" class="form-control custom-input" id="exampleFormControlInput4" placeholder="Digite sua função">
-      </div><div class="mb-3">
-        <input type="text" class="form-control custom-input" id="exampleFormControlInput" placeholder="Digite seu Setor">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Observação</label>
-        <textarea class="form-control custom-input" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
+
       <button type="submit" name="enviar" value="enviar" class="custom-button">Solicitar</button>
       <button type="reset" name="limpar" value="limpar" class="custom-button2">Limpar</button>
-	  <button type="button" onclick="window.location.href='/cervejaria/index.html'" class="custom-button3">Voltar</button>
-
+	    <button type="button" onclick="window.location.href='/cervejaria/index.html'" class="custom-button3">Voltar</button>
     </div>
   </form>
-</div>
+
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
