--- a/frontend/esqueci.html
+++ b/frontend/esqueci.html
@@ -112,7 +112,7 @@ body {
 
       <button type="submit" name="enviar" value="enviar" class="custom-button">Solicitar</button>
       <button type="reset" name="limpar" value="limpar" class="custom-button2">Limpar</button>
-	    <button type="button" onclick="window.location.href='/cervejaria/index.html'" class="custom-button3">Voltar</button>
+	    <button type="button" onclick="window.location.href='/'" class="custom-button3">Voltar</button>
     </div>
   </form>
 
